--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsList.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsList.html
@@ -104,7 +104,7 @@
             <th data-field="touristType" data-align="center">线路类型</th>
             <th data-field="activityType" data-align="center">活动类型</th>
             <th data-field="price" data-align="center" data-sortable="true">价格</th>
-            <th data-field="stock" data-align="center">剩余库存</th>
+            <th data-field="surplus" data-align="center">剩余库存</th>
             <th data-field="destination" data-align="center">目的地</th>
             <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
             <th data-field="touristCheckState" data-align="center"
@@ -121,7 +121,13 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
-<script src="../../../assets/js/manage/supplier/goodsList.js" th:inline="javascript"></script>
+<script type="text/javascript" th:inline="javascript">
+    /*<![CDATA[*/
+    var recyleUrl=/*[[@{/base/modifyTouristGoodState}]]*/"../../../mock/supplier/httpJson.json";
+    var showGoodsDetalUrl=/*[[@{/supplier/showTouristGood}]]*/"goodsDetailsH+.html";
+    /*]]>*/
+</script>
+<script src="../../../assets/js/manage/supplier/goodsList.js"></script>
 </body>
 
 </html>
