--- a/tourist-web/src/main/webapp/view/manage/supplier/supplierDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/supplierDetailsH+.html
@@ -137,61 +137,18 @@
 <script src="../../../assets/libs/cityPicker/js/city-picker.data.js"></script>
 <script src="../../../assets/libs/cityPicker/js/city-picker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/ajaxfileupload/ajaxfileupload.js"></script>
-<script src="../../../assets/js/manage/supplier/supplierDetails.js" th:inline="javascript"></script>
+
 
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    /**
-     * 提交表单
-     * @param obj
-     */
-    var submitForm=function(obj) {
-        if($(obj).attr("class")=="btn btn-primary disabled"){
-            return;
-        }
-        var id=$("input[name='id']").val();
-        var supplierName=$("input[name='supplierName']").val();
-        var businessLicenseUri=$("#pictureUrl").attr("src");
-        var address=$("input[name='address']").val();
-        var detailedAddress=$("input[name='detailedAddress']").val();
 
-        var contacts=$("input[name='contacts']").val();
-
-        var contactNumber=$("input[name='contactNumber']").val();
-
-        var remarks=$("input[name='remarks']").val();
-        var url=/*[[@{/supplier/modifySupplierInfo}]]*/ '../../../mock/supplier/httpJson.json';
-
-
-        var ld=layer.load(5, {shade: false});
-        $(obj).attr("class","btn btn-primary disabled");
-
-        $.ajax({
-            type:'POST',
-            url: url,
-            dataType: 'text',
-//            contentType:"application/json",
-            data:{id:id,supplierName:supplierName,businessLicenseUri:businessLicenseUri,address:address
-                ,detailedAddress:detailedAddress, contacts:contacts,contactNumber:contactNumber
-                ,remarks:remarks},
-            success:function(){
-                layer.close(ld);
-                layer.msg("保存成功！");
-                $(obj).attr("class","btn btn-success");
-//            window.setTimeout("window.location='/back/showMessageList'",1000);
-            },
-            error:function(e){
-                layer.close(ld);
-                layer.msg("保存失败！");
-                $(obj).attr("class","btn btn-success");
-            }
-        });
-    };
-
+    var submitUrl=/*[[@{/supplier/modifySupplierInfo}]]*/ '../../../mock/supplier/httpJson.json';
 
     /*]]>*/
 
 </script>
+
+<script src="../../../assets/js/manage/supplier/supplierDetails.js"></script>
 </body>
 
 </html>
