前台 我的  页面

--- a/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
@@ -249,7 +249,9 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/iCheck/icheck.min.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    var modifyOrderStateUrl=/*[[@{base/modifyOrderState}]]*/'../../mock/supplier/orderDetails.json';
+    var modifyOrderStateUrl=/*[[@{/base/modifyOrderState}]]*/'../../mock/supplier/orderDetails.json';
+
+    var modifytouristInfoUrl=/*[[@{/base/modifyTravelerBaseInfo}]]*/'../../mock/supplier/orderDetails.json';
     /*]]>*/
 
 </script>
