--- a/tourist-web/src/main/webapp/view/manage/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderList.html
@@ -191,6 +191,7 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
+    var TouristDetailsUrl=/*[[@{/supplier/showOrder}]]*/ "orderDetails.html";
 
     var modifyTouristDateUrl = /*[[@{/base/modifyOrderTouristDate}]]*/ "../../../mock/supplier/httpJson.json";
     var modifyRemarkUrl = /*[[@{/base/modifyOrderRemarks}]]*/ "../../../mock/supplier/httpJson.json";
