--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
@@ -76,7 +76,7 @@
                                             <label class="col-sm-1 control-label">封面图片：</label>
 
                                             <div class="col-sm-10">
-                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
+                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="@{*{touristImgUri}}"
                                                          src="http://placehold.it/300x200?text=封面&size=50"/>
                                                 <label title="上传图片" for="fileImage" class="btn btn-success">
                                                     <input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
