--- a/tourist-web/src/main/webapp/view/wap/my.html
+++ b/tourist-web/src/main/webapp/view/wap/my.html
@@ -1,5 +1,14 @@
 <!doctype html>
-<html lang="en">
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
+
+<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -14,23 +23,31 @@
     <link rel="stylesheet" type="text/css" href="../../assets/css/weui.min-xzlx-diy.css">
     <title>我的</title>
 </head>
-
+<!--/*@thymesVar id="headUrl" type="java.lang.String"*/-->
+<!--/*@thymesVar id="buyer" type="com.huotu.tourist.entity.TouristBuyer"*/-->
+<!--/*@thymesVar id="allNotFinish" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="allFinish" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="allInvalid" type="java.lang.Integer"*/-->
+<!--/*@thymesVar id="commission" type="java.math.BigDecimal"*/-->
 <body class="bac">
 <div class="xzlx-hot">
     <div class="swiper-container">
         <div class="f-bigbox">
             <div class="fa-bigbox">
-                <p class="f-moren-q"><img style="width:54px; height:54px;" src="../../assets/img/imgsss.png"></p>
+                <p class="f-moren-q">
+                <img style="width:54px; height:54px;" th:src="@{${headUrl}}" src="../../assets/img/imgsss.png"></p>
                 <div style="padding-bottom: 8px;">
-                    <p class="phone">刘琳</p>
+                    <p class="phone" th:text="${buyer.nickname}">刘琳</p>
                 </div>
                 <p style="clear:both"></p>
             </div>
         </div>
         <div class="weui_cells weui_cells_access">
-            <a class="weui_cell" href="allOrder.html">
-                <div class="weui_cell_hd"><img src="../../assets/img/cg.png" alt=""
-                                               style="width:20px;margin-right:5px;display:block"></div>
+            <a class="weui_cell" th:href="@{/wap/showAllOrders(id=${buyer.id})}" href="allOrder.html">
+                <div class="weui_cell_hd">
+                    <img src="../../assets/img/cg.png" alt=""
+                                               style="width:20px;margin-right:5px;display:block">
+                </div>
                 <div class="weui_cell_bd weui_cell_primary">
                     <p>我的采购</p>
                 </div>
@@ -39,39 +56,43 @@
         </div>
         <div class="weui_navbar">
             <a href="javascript:;" class="weui_tabbar_item">
-                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;">120</p>
+
+                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;" th:text="${allNotFinish}">120</p>
                 <p class="weui_tabbar_label">进行中</p>
             </a>
             <a href="javascript:;" class="weui_tabbar_item">
-                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;">120</p>
+                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;" th:text="${allFinish}">120</p>
                 <p class="weui_tabbar_label">已完成</p>
             </a>
             <a href="javascript:;" class="weui_tabbar_item">
-                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;">120</p>
-                <p class="weui_tabbar_label">已退出</p>
+                <p class="weui_tabbar_label" style="font-size: 20px;color: #ff9935;" th:text="${allInvalid}">120</p>
+                <p class="weui_tabbar_label">已取消</p>
             </a>
         </div>
 
         <div class="weui_cells weui_cells_access" style="margin-top: 10px;">
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell">
                 <div class="weui_cell_hd"><img src="../../assets/img/yj.png" alt=""
                                                style="width:20px;margin-right:5px;display:block"></div>
                 <div class="weui_cell_bd weui_cell_primary">
-                    <p>我的佣金</p>
+                    <p>我的总收益</p>
                 </div>
-                <div class="weui_cell_ft" style="font-size: 14px;">￥2010.00</div>
+
+                <!--<div class="weui_cell_ft" style="font-size: 14px;" th:text="'￥'+${commission}">￥2010.00</div>-->
             </a>
         </div>
         <div class="txmoney">
-            <p class="red">￥209.00</p>
-            <p class="hui">可提现总金额/元</p>
+            <p class="red"  th:text="'￥'+${commission}">￥209.00</p>
+            <!--<p class="hui">可提现总金额/元</p>-->
         </div>
         <div style="margin: 10px">
             <a href="javascript:;" class="weui_btn weui_btn_primary">提现</a>
-            <p class="txtxtx">查看提现明细</p>
-            <div class="txtxsm">
+            <p class="txtxtx" onclick="showDepositInfo()">查看提现明细</p>
+            <div class="txtxsm" style="display: none">
                 <p>提现说明</p>
-                <p>提现说明提现说明提现说明提现说明</p>
+                <p> 提现说明提现提现说明提现说明提现说明提现说明提现说明提现说
+                    明提现说明提现说明提现说明提现说明提现说明提现说明提现
+                    说明提现说明提现说明提现说明说明提现说明提现说明</p>
             </div>
         </div>
     </div>
@@ -79,17 +100,17 @@
     <p style="height: 80px; clear: both"></p>
     <!--底部导航-->
     <div class="weui_navbar daohangs">
-        <a href="index.html" class="weui_navbar_item weui_bar_item_on">
+        <a href="index.html" class="weui_navbar_item">
             <p class="kimg dhshouyeicon"></p>
             <p>首页</p>
         </a>
-        <a href="search.html" class="weui_navbar_item ">
+        <a href="search.html" class="weui_navbar_item">
             <p class="kimg dhsousuoicon"></p>
             <p>搜索</p>
         </a>
-        <a href="my.html" class="weui_navbar_item">
+        <a th:href="@{/wap/showMyInfo}" href="my.html" class="weui_navbar_item weui_bar_item_on">
             <p class="kimg dhwodeicon"></p>
-            <p> 我的</p>
+            <p>我的</p>
         </a>
     </div>
 
@@ -101,3 +122,9 @@
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script type="text/javascript" src="js/w/swiper.animate1.0.2.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
+<script>
+    var showDepositInfo=function(){
+        $(".txtxsm").toggle("normal");
+    };
+
+</script>
