底部导航栏提取

--- a/tourist-web/src/main/webapp/view/wap/my.html
+++ b/tourist-web/src/main/webapp/view/wap/my.html
@@ -99,7 +99,7 @@
     <!--底部高度-->
     <p style="height: 80px; clear: both"></p>
     <!--底部导航-->
-    <div class="weui_navbar daohangs">
+    <div class="weui_navbar daohangs" th:replace="view/wap/bottom.html :: bottom">
         <a href="index.html" class="weui_navbar_item">
             <p class="kimg dhshouyeicon"></p>
             <p>首页</p>
@@ -108,13 +108,12 @@
             <p class="kimg dhsousuoicon"></p>
             <p>搜索</p>
         </a>
-        <a th:href="@{/wap/showMyInfo}" href="my.html" class="weui_navbar_item weui_bar_item_on">
+        <a href="my.html" class="weui_navbar_item weui_bar_item_on">
             <p class="kimg dhwodeicon"></p>
             <p>我的</p>
         </a>
     </div>
 
-    <!---->
 </div>
 </body>
 </html>
