--- a/tourist-web/src/main/webapp/view/wap/allOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/allOrder.html
@@ -1,5 +1,14 @@
 <!doctype html>
-<html lang="en">
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
+
+<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -168,7 +177,6 @@
         </a>
     </div>
 
-    <!---->
 </div>
 </body>
 </html>
